WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303382
[blocks-in-inline] Ignore in accessibility tree
https://bugs.webkit.org/show_bug.cgi?id=303382
Summary
[blocks-in-inline] Ignore in accessibility tree
Antti Koivisto
Reported
2025-12-02 03:45:40 PST
Blocks need to be treated as ignored.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-02 03:45:50 PST
<
rdar://problem/165686107
>
Antti Koivisto
Comment 2
2025-12-02 03:52:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54692
EWS
Comment 3
2025-12-02 06:24:11 PST
Committed
303753@main
(f5c72db112d4): <
https://commits.webkit.org/303753@main
> Reviewed commits have been landed. Closing PR #54692 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug