[blocks-in-inline] Ignore in accessibility tree https://bugs.webkit.org/show_bug.cgi?id=303382 rdar://165686107

Reviewed by Alan Baradlay.

Test: fast/inline/blocks-in-inline-ax-invalid.html
* LayoutTests/fast/inline/blocks-in-inline-ax-invalid-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-ax-invalid.html: Added.
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::computeIsIgnored const):

We should treat blocks with no ax role as ignored. For some unknown historical reasons (as indicated by the comment)
we don't ignore some block boxes that contain lines. Treat block-in-inline case like pure block content and let the
normal ignore logic complete.

* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::hasBlocks const):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.h:
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::hasBlocksInInlineLayout const):
* Source/WebCore/rendering/RenderBlockFlow.h:

Canonical link: https://commits.webkit.org/303753@main